fix: modal content style and contrast

--- a/packages/react-components/src/components/modal/content/modal-content.module.css
+++ b/packages/react-components/src/components/modal/content/modal-content.module.css
@@ -3,7 +3,8 @@
 
 @layer components {
   .Content {
-    background-color: var(--dimmed-1);
+    background-color: var(--global-background);
+    border: 1px solid var(--dimmed-1);
     overscroll-behavior: contain;
     inline-size: 100vw;
     overflow: hidden;
@@ -31,6 +32,7 @@
 
     @mixin vibrancy;
 
+    border-bottom: 1px solid var(--dimmed-1);
     overflow: hidden;
     border-radius: token(--radius-24) token(--radius-24) 0 0;
     position: sticky;
